# k-mean-algorithm

./: README.md  pyproject.toml  start.py
model/: __init__.py  k_mean.py
