[tool.poetry]
name = "k-mean-algorithm"
version = "0.1.0"
description = "A basic implemation of k-mean algorithm"
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
